legacy/2026-05-cleanup/wt-editor-routes/synthetic-data/platform/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: syntheticbank
  labels:
    name: syntheticbank
